--- a/about.html
+++ b/about.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us - BreadOfLife Bakery</title>
+    <title>About Us</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Learn about BreadOfLife Bakery's journey. We believe in baking with love, patience, and care. Our story began as a vision to nourish both body and soul." />
+    <meta name="keywords" content="about us, bakery story, artisan bakery, traditional baking, community bakery" />
+    <meta name="author" content="BreadOfLife Bakery" />
+    <meta name="robots" content="index, follow" />
     <!-- tailwind link -->
     <link rel="stylesheet" href="src/output.css" />
     <!-- flowbite link -->
