--- a/breads.html
+++ b/breads.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Breads - BreadOfLife Bakery</title>
+    <title>Breads</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Fresh baked breads at BreadOfLife Bakery. Choose from white bread, wheat bread, croissants, baguettes, and more. A slice of peace in every loaf." />
+    <meta name="keywords" content="fresh bread, croissant, baguette, wheat bread, artisan bread, bakery bread" />
+    <meta name="author" content="BreadOfLife Bakery" />
+    <meta name="robots" content="index, follow" />
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Flowbite CSS -->
