--- a/cakes.html
+++ b/cakes.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cakes</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Delicious cakes from BreadOfLife Bakery. Red velvet, carrot cake, tiramisu, cheesecake and more. Sweetness worth sharing for every occasion." />
+    <meta name="keywords" content="cakes, red velvet cake, cheesecake, birthday cake, custom cakes, desserts" />
+    <meta name="author" content="BreadOfLife Bakery" />
+    <meta name="robots" content="index, follow" />
     <!-- tailwind link -->
     <link rel="stylesheet" href="src/output.css" />
     <!-- flowbite link -->
