--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us - BreadOfLife Bakery</title>
+    <title>Contact Us</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Contact BreadOfLife Bakery. Visit us at Phnom Penh, Mronchey, St 264 or call 096 77 777. We're here to answer your questions and take your orders." />
+    <meta name="keywords" content="contact bakery, bakery location, bakery phone, bakery address, order bakery" />
+    <meta name="author" content="BreadOfLife Bakery" />
+    <meta name="robots" content="index, follow" />
     <!-- tailwind link -->
     <link rel="stylesheet" href="src/output.css" />
     <!-- flowbite link -->
