--- a/drinks.html
+++ b/drinks.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Drinks - BreadOfLife Bakery</title>
+    <title>Drinks</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Premium drinks at BreadOfLife Bakery. Espresso, latte, matcha, smoothies, and more. Liquid comfort in every cup. Perfect pairing for our baked goods." />
+    <meta name="keywords" content="coffee, espresso, latte, matcha latte, smoothies, drinks, beverages, cafe" />
+    <meta name="author" content="BreadOfLife Bakery" />
+    <meta name="robots" content="index, follow" />
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Flowbite CSS -->
