--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="BreadOfLife Bakery - Fresh baked breads, delicious cakes, and premium drinks. We bake with love and serve with a smile. Order online for delivery in Phnom Penh." />
+    <meta name="keywords" content="bakery, bread, cakes, drinks, coffee, croissants, fresh baked, Phnom Penh bakery, online bakery" />
+    <meta name="author" content="BreadOfLife Bakery" />
+    <meta name="robots" content="index, follow" />
     <!-- tailwind link -->
     <link rel="stylesheet" href="src/output.css" />
     <script src="https://cdn.tailwindcss.com"></script>
