--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Browse our complete menu of fresh breads, delicious cakes, and premium drinks. From classic croissants to specialty coffees - where life tastes sweet." />
+    <meta name="keywords" content="bakery menu, bread menu, cake menu, drinks menu, coffee menu, bakery prices" />
+    <meta name="author" content="BreadOfLife Bakery" />
+    <meta name="robots" content="index, follow" />
     <!-- tailwind link -->
     <link rel="stylesheet" href="src/output.css" />
 
